--- a/openvpn_lib_android/build.gradle
+++ b/openvpn_lib_android/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'maven-publish'
 }
 
-group = 'com.github.AntonSannikov'
+group = 'com.github.Chewbacca-14'
 
 android {
     buildToolsVersion = "33.0.1"
@@ -72,9 +72,9 @@ dependencies {
 publishing {
     publications {
         release(MavenPublication) {
-            groupId = 'com.github.AntonSannikov'
+            groupId = 'com.github.Chewbacca-14'
             artifactId = 'openvpn_lib_android'
-            version = '1.1.4'
+            version = '1.0.0'
             afterEvaluate {
                 from components.release
             }
